src/dart/godot_dart/lib/src/core/gdextension_ffi_bindings.dart


class __crt_locale_pointers extends ffi.Struct {
  external ffi.Pointer<__crt_locale_data> locinfo;

  external ffi.Pointer<__crt_multibyte_data> mbcinfo;
}

class __crt_locale_data extends ffi.Opaque {}

class __crt_multibyte_data extends ffi.Opaque {}

class _Mbstatet extends ffi.Struct {
  @ffi.UnsignedLong()
  external int _Wchar;

  @ffi.UnsignedShort()
  external int _Byte;

  @ffi.UnsignedShort()
  external int _State;
}

typedef errno_t = ffi.Int;

abstract class GDExtensionVariantType {
  static const int GDEXTENSION_VARIANT_TYPE_NIL = 0;
  static const int GDEXTENSION_VARIANT_TYPE_BOOL = 1;
  static const int GDEXTENSION_VARIANT_TYPE_INT = 2;
  static const int GDEXTENSION_VARIANT_TYPE_FLOAT = 3;
  static const int GDEXTENSION_VARIANT_TYPE_STRING = 4;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR2 = 5;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR2I = 6;
  static const int GDEXTENSION_VARIANT_TYPE_RECT2 = 7;
  static const int GDEXTENSION_VARIANT_TYPE_RECT2I = 8;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR3 = 9;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR3I = 10;
  static const int GDEXTENSION_VARIANT_TYPE_TRANSFORM2D = 11;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR4 = 12;
  static const int GDEXTENSION_VARIANT_TYPE_VECTOR4I = 13;
  static const int GDEXTENSION_VARIANT_TYPE_PLANE = 14;
  static const int GDEXTENSION_VARIANT_TYPE_QUATERNION = 15;
  static const int GDEXTENSION_VARIANT_TYPE_AABB = 16;
  static const int GDEXTENSION_VARIANT_TYPE_BASIS = 17;
  static const int GDEXTENSION_VARIANT_TYPE_TRANSFORM3D = 18;
  static const int GDEXTENSION_VARIANT_TYPE_PROJECTION = 19;
  static const int GDEXTENSION_VARIANT_TYPE_COLOR = 20;
  static const int GDEXTENSION_VARIANT_TYPE_STRING_NAME = 21;
  static const int GDEXTENSION_VARIANT_TYPE_NODE_PATH = 22;
  static const int GDEXTENSION_VARIANT_TYPE_RID = 23;
  static const int GDEXTENSION_VARIANT_TYPE_OBJECT = 24;
  static const int GDEXTENSION_VARIANT_TYPE_CALLABLE = 25;
  static const int GDEXTENSION_VARIANT_TYPE_SIGNAL = 26;
  static const int GDEXTENSION_VARIANT_TYPE_DICTIONARY = 27;
  static const int GDEXTENSION_VARIANT_TYPE_ARRAY = 28;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_BYTE_ARRAY = 29;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_INT32_ARRAY = 30;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_INT64_ARRAY = 31;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_FLOAT32_ARRAY = 32;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_FLOAT64_ARRAY = 33;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_STRING_ARRAY = 34;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_VECTOR2_ARRAY = 35;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_VECTOR3_ARRAY = 36;
  static const int GDEXTENSION_VARIANT_TYPE_PACKED_COLOR_ARRAY = 37;
  static const int GDEXTENSION_VARIANT_TYPE_VARIANT_MAX = 38;
}

abstract class GDExtensionVariantOperator {
  static const int GDEXTENSION_VARIANT_OP_EQUAL = 0;
  static const int GDEXTENSION_VARIANT_OP_NOT_EQUAL = 1;
  static const int GDEXTENSION_VARIANT_OP_LESS = 2;
  static const int GDEXTENSION_VARIANT_OP_LESS_EQUAL = 3;
  static const int GDEXTENSION_VARIANT_OP_GREATER = 4;
  static const int GDEXTENSION_VARIANT_OP_GREATER_EQUAL = 5;
  static const int GDEXTENSION_VARIANT_OP_ADD = 6;
  static const int GDEXTENSION_VARIANT_OP_SUBTRACT = 7;
  static const int GDEXTENSION_VARIANT_OP_MULTIPLY = 8;
  static const int GDEXTENSION_VARIANT_OP_DIVIDE = 9;
  static const int GDEXTENSION_VARIANT_OP_NEGATE = 10;
  static const int GDEXTENSION_VARIANT_OP_POSITIVE = 11;
  static const int GDEXTENSION_VARIANT_OP_MODULE = 12;
  static const int GDEXTENSION_VARIANT_OP_POWER = 13;
  static const int GDEXTENSION_VARIANT_OP_SHIFT_LEFT = 14;
  static const int GDEXTENSION_VARIANT_OP_SHIFT_RIGHT = 15;
  static const int GDEXTENSION_VARIANT_OP_BIT_AND = 16;
  static const int GDEXTENSION_VARIANT_OP_BIT_OR = 17;
  static const int GDEXTENSION_VARIANT_OP_BIT_XOR = 18;
  static const int GDEXTENSION_VARIANT_OP_BIT_NEGATE = 19;
  static const int GDEXTENSION_VARIANT_OP_AND = 20;
  static const int GDEXTENSION_VARIANT_OP_OR = 21;
  static const int GDEXTENSION_VARIANT_OP_XOR = 22;
  static const int GDEXTENSION_VARIANT_OP_NOT = 23;
  static const int GDEXTENSION_VARIANT_OP_IN = 24;
  static const int GDEXTENSION_VARIANT_OP_MAX = 25;
}

abstract class GDExtensionCallErrorType {
  static const int GDEXTENSION_CALL_OK = 0;
  static const int GDEXTENSION_CALL_ERROR_INVALID_METHOD = 1;
  static const int GDEXTENSION_CALL_ERROR_INVALID_ARGUMENT = 2;
  static const int GDEXTENSION_CALL_ERROR_TOO_MANY_ARGUMENTS = 3;
  static const int GDEXTENSION_CALL_ERROR_TOO_FEW_ARGUMENTS = 4;
  static const int GDEXTENSION_CALL_ERROR_INSTANCE_IS_NULL = 5;
  static const int GDEXTENSION_CALL_ERROR_METHOD_NOT_CONST = 6;
}

class GDExtensionCallError extends ffi.Struct {
  @ffi.Int32()
  external int error;

  @ffi.Int32()
  external int argument;

  @ffi.Int32()
  external int expected;
}

class GDExtensionInstanceBindingCallbacks extends ffi.Struct {
  external GDExtensionInstanceBindingCreateCallback create_callback;

  external GDExtensionInstanceBindingFreeCallback free_callback;

  external GDExtensionInstanceBindingReferenceCallback reference_callback;
}

typedef GDExtensionInstanceBindingCreateCallback = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>;
typedef GDExtensionInstanceBindingFreeCallback = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Void>)>>;
typedef GDExtensionInstanceBindingReferenceCallback = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, GDExtensionBool)>>;
typedef GDExtensionBool = ffi.Uint8;

class GDExtensionPropertyInfo extends ffi.Struct {
  @ffi.Int32()
  external int type;

  external GDExtensionStringNamePtr name;

  external GDExtensionStringNamePtr class_name;

  @ffi.Uint32()
  external int hint;

  external GDExtensionStringPtr hint_string;

  @ffi.Uint32()
  external int usage;
}

typedef GDExtensionStringNamePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionStringPtr = ffi.Pointer<ffi.Void>;

class GDExtensionMethodInfo extends ffi.Struct {
  external GDExtensionStringNamePtr name;

  external GDExtensionPropertyInfo return_value;

  @ffi.Uint32()
  external int flags;

  @ffi.Int32()
  external int id;

  @ffi.Uint32()
  external int argument_count;

  external ffi.Pointer<GDExtensionPropertyInfo> arguments;

  @ffi.Uint32()
  external int default_argument_count;

  external ffi.Pointer<GDExtensionVariantPtr> default_arguments;
}

typedef GDExtensionVariantPtr = ffi.Pointer<ffi.Void>;

class GDExtensionClassCreationInfo extends ffi.Struct {
  @GDExtensionBool()
  external int is_virtual;

  @GDExtensionBool()
  external int is_abstract;

  external GDExtensionClassSet set_func;

  external GDExtensionClassGet get_func;

  external GDExtensionClassGetPropertyList get_property_list_func;

  external GDExtensionClassFreePropertyList free_property_list_func;

  external GDExtensionClassPropertyCanRevert property_can_revert_func;

  external GDExtensionClassPropertyGetRevert property_get_revert_func;

  external GDExtensionClassNotification notification_func;

  external GDExtensionClassToString to_string_func;

  external GDExtensionClassReference reference_func;

  external GDExtensionClassUnreference unreference_func;

  external GDExtensionClassCreateInstance create_instance_func;

  external GDExtensionClassFreeInstance free_instance_func;

  external GDExtensionClassGetVirtual get_virtual_func;

  external GDExtensionClassGetRID get_rid_func;

  external ffi.Pointer<ffi.Void> class_userdata;
}

typedef GDExtensionClassSet = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionClassInstancePtr,
            GDExtensionConstStringNamePtr, GDExtensionConstVariantPtr)>>;
typedef GDExtensionClassInstancePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionConstStringNamePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionConstVariantPtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionClassGet = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionClassInstancePtr,
            GDExtensionConstStringNamePtr, GDExtensionVariantPtr)>>;
typedef GDExtensionClassGetPropertyList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<GDExtensionPropertyInfo> Function(
            GDExtensionClassInstancePtr, ffi.Pointer<ffi.Uint32>)>>;
typedef GDExtensionClassFreePropertyList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionClassInstancePtr,
            ffi.Pointer<GDExtensionPropertyInfo>)>>;
typedef GDExtensionClassPropertyCanRevert = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(
            GDExtensionClassInstancePtr, GDExtensionConstStringNamePtr)>>;
typedef GDExtensionClassPropertyGetRevert = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionClassInstancePtr,
            GDExtensionConstStringNamePtr, GDExtensionVariantPtr)>>;
typedef GDExtensionClassNotification = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionClassInstancePtr, ffi.Int32)>>;
typedef GDExtensionClassToString = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionClassInstancePtr,
            ffi.Pointer<GDExtensionBool>, GDExtensionStringPtr)>>;
typedef GDExtensionClassReference = ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(GDExtensionClassInstancePtr)>>;
typedef GDExtensionClassUnreference = ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(GDExtensionClassInstancePtr)>>;
typedef GDExtensionClassCreateInstance = ffi.Pointer<
    ffi.NativeFunction<GDExtensionObjectPtr Function(ffi.Pointer<ffi.Void>)>>;
typedef GDExtensionObjectPtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionClassFreeInstance = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<ffi.Void>, GDExtensionClassInstancePtr)>>;
typedef GDExtensionClassGetVirtual = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionClassCallVirtual Function(
            ffi.Pointer<ffi.Void>, GDExtensionConstStringNamePtr)>>;
typedef GDExtensionClassCallVirtual = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionClassInstancePtr,
            ffi.Pointer<GDExtensionConstTypePtr>, GDExtensionTypePtr)>>;
typedef GDExtensionConstTypePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionTypePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionClassGetRID = ffi.Pointer<
    ffi.NativeFunction<ffi.Uint64 Function(GDExtensionClassInstancePtr)>>;

abstract class GDExtensionClassMethodFlags {
  static const int GDEXTENSION_METHOD_FLAG_NORMAL = 1;
  static const int GDEXTENSION_METHOD_FLAG_EDITOR = 2;
  static const int GDEXTENSION_METHOD_FLAG_CONST = 4;
  static const int GDEXTENSION_METHOD_FLAG_VIRTUAL = 8;
  static const int GDEXTENSION_METHOD_FLAG_VARARG = 16;
  static const int GDEXTENSION_METHOD_FLAG_STATIC = 32;
  static const int GDEXTENSION_METHOD_FLAGS_DEFAULT = 1;
}
